# pypi-publish-with-poetry

./: README.md  action.yml  get-minimum-version.py
.github/workflows/: pypi-publish-with-poetry.yml  release.yml  test-release.yml
pypi-publish-with-poetry-dogfood/: README.md  pyproject.toml
